k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: smartsite
  labels:
    app: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: chedlyrebai/api-gateway:latest
          ports:
            - containerPort: 3007
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: smartsite
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 3007
      targetPort: 3007
      protocol: TCP
