k8s/gestion-projects-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-projects
  namespace: smartsite
  labels:
    app: gestion-projects
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gestion-projects
  template:
    metadata:
      labels:
        app: gestion-projects
    spec:
      containers:
        - name: gestion-projects
          image: chedlyrebai/gestion-projects-api:latest
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: gestion-projects
  namespace: smartsite
  labels:
    app: gestion-projects
spec:
  type: ClusterIP
  selector:
    app: gestion-projects
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
