k8s/gestion-site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-site
  namespace: smartsite
  labels:
    app: gestion-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gestion-site
  template:
    metadata:
      labels:
        app: gestion-site
    spec:
      containers:
        - name: gestion-site
          image: chedlyrebai/gestion-site-api:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: gestion-site
  namespace: smartsite
  labels:
    app: gestion-site
spec:
  type: ClusterIP
  selector:
    app: gestion-site
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
