k8s/gestion-suppliers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-suppliers
  namespace: smartsite
  labels:
    app: gestion-suppliers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gestion-suppliers
  template:
    metadata:
      labels:
        app: gestion-suppliers
    spec:
      containers:
        - name: gestion-suppliers
          image: chedlyrebai/gestion-suppliers-api:latest
          ports:
            - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: gestion-suppliers
  namespace: smartsite
  labels:
    app: gestion-suppliers
spec:
  type: ClusterIP
  selector:
    app: gestion-suppliers
  ports:
    - port: 3005
      targetPort: 3005
      protocol: TCP
