k8s/incident-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-management
  namespace: smartsite
  labels:
    app: incident-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: incident-management
  template:
    metadata:
      labels:
        app: incident-management
    spec:
      containers:
        - name: incident-management
          image: chedlyrebai/incident-management-api:latest
          ports:
            - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: incident-management
  namespace: smartsite
  labels:
    app: incident-management
spec:
  type: ClusterIP
  selector:
    app: incident-management
  ports:
    - port: 3006
      targetPort: 3006
      protocol: TCP
