k8s/materials-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: materials-service
  namespace: smartsite
  labels:
    app: materials-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: materials-service
  template:
    metadata:
      labels:
        app: materials-service
    spec:
      containers:
        - name: materials-service
          image: chedlyrebai/materials-service:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: materials-service
  namespace: smartsite
  labels:
    app: materials-service
spec:
  type: ClusterIP
  selector:
    app: materials-service
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
