k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: smartsite
  labels:
    app: notification
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: chedlyrebai/notification-service:latest
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: smartsite
  labels:
    app: notification
spec:
  type: ClusterIP
  selector:
    app: notification
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
