k8s/paiement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paiement
  namespace: smartsite
  labels:
    app: paiement
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paiement
  template:
    metadata:
      labels:
        app: paiement
    spec:
      containers:
        - name: paiement
          image: chedlyrebai/paiement-service:latest
          ports:
            - containerPort: 3008
---
apiVersion: v1
kind: Service
metadata:
  name: paiement
  namespace: smartsite
  labels:
    app: paiement
spec:
  type: ClusterIP
  selector:
    app: paiement
  ports:
    - port: 3008
      targetPort: 3008
      protocol: TCP
