k8s/resource-optimization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-optimization
  namespace: smartsite
  labels:
    app: resource-optimization
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resource-optimization
  template:
    metadata:
      labels:
        app: resource-optimization
    spec:
      containers:
        - name: resource-optimization
          image: mahmoud340/smart-site-resource-optimization
          ports:
            - containerPort: 3007
---
apiVersion: v1
kind: Service
metadata:
  name: resource-optimization
  namespace: smartsite
  labels:
    app: resource-optimization
spec:
  type: ClusterIP
  selector:
    app: resource-optimization
  ports:
    - port: 3007
      targetPort: 3007
      protocol: TCP
