k8s/user-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-auth
  namespace: smartsite
  labels:
    app: user-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-auth
  template:
    metadata:
      labels:
        app: user-auth
    spec:
      containers:
        - name: user-auth
          image: chedlyrebai/user-authentication-api:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-auth
  namespace: smartsite
  labels:
    app: user-auth
spec:
  type: ClusterIP
  selector:
    app: user-auth
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
