k8s/videocall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videocall
  namespace: smartsite
  labels:
    app: videocall
spec:
  replicas: 2
  selector:
    matchLabels:
      app: videocall
  template:
    metadata:
      labels:
        app: videocall
    spec:
      containers:
        - name: videocall
          image: chedlyrebai/video-call:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: videocall
  namespace: smartsite
  labels:
    app: videocall
spec:
  type: ClusterIP
  selector:
    app: videocall
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
